[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/pickups/chest.png" type="Texture" id=1]
[ext_resource path="res://pickups/crate.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 14 )

[node name="Crate" type="RigidBody2D" groups=["crate"]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
